tests/bad/var_not_found.ae
/// fail: Variable not found

def main() {
    return x
}